@@ -26,7 +26,7 @@ div.fullpage {
 
 /* Index */
 
-h2#workflow_management, h2#copy_options {
+h2.workflow_management, h2#copy_options {
    font-variant: small-caps;
    text-decoration: underline;
 }
@@ -50,6 +50,12 @@ span.action_buttons {
     right: 0;
     padding-right: 10px;
     margin: 2px;
+}
+
+a.workflow_management {
+    cursor: pointer;
+    font-variant: small-caps;
+    text-decoration: underline;
 }
 /* **** */
 
