@@ -1,32 +1,0 @@
-{% extends "workflow/base.html" %}
-
-{% block title %}Create Workflow{% endblock %}
-
-{% block content %}
-
-    <div>Workflow creation</div>
-
-    {% ifequal status "NEW" %}
-        <div>
-            <form action={% url workflow-new %} method=POST>
-                {{ form.workflow.label }} : {{ form.workflow }}
-                {{ form.version.label }} : {{ form.version }}
-                <input type=submit title="Create"></input>
-            </form>
-        </div>
-    {% endifequal %}
-
-    {% ifequal status "OK" %}
-        <div>
-            <span> workflow created </span>
-        </div>
-    {% endifequal %}
-
-    {% ifequal status "KO" %}
-        <div>
-            <span> workflow not created : {{ error }} </span>
-        </div>
-    {% endifequal %}
-
-
-{% endblock content %}
